# Breakout

./: Breakout.c  CMakeLists.txt  FuncDefs.c  FuncDefs.h  GameLoop.c  GameLoop.h  IncludeHeader.h  InitFuncs.c  InitFuncs.h  Macrodefs.h  README.md  Typedefs.h
{fileBasename}/: Breakout
